@@ -566,6 +566,21 @@ option.
 .B \-\-joystick\-1\-fire\-10
 .I code
 .br
+.B \-\-joystick\-1\-fire\-11
+.I code
+.br
+.B \-\-joystick\-1\-fire\-12
+.I code
+.br
+.B \-\-joystick\-1\-fire\-13
+.I code
+.br
+.B \-\-joystick\-1\-fire\-14
+.I code
+.br
+.B \-\-joystick\-1\-fire\-15
+.I code
+.br
 .B \-\-joystick\-2\-fire\-1
 .I code
 .br
@@ -594,6 +609,21 @@ option.
 .I code
 .br
 .B \-\-joystick\-2\-fire\-10
+.I code
+.br
+.B \-\-joystick\-2\-fire\-11
+.I code
+.br
+.B \-\-joystick\-2\-fire\-12
+.I code
+.br
+.B \-\-joystick\-2\-fire\-13
+.I code
+.br
+.B \-\-joystick\-2\-fire\-14
+.I code
+.br
+.B \-\-joystick\-2\-fire\-15
 .I code
 .RS
 Select which Fuse key code should be triggered by the applicable
